# crates

./: .envrc  .gitignore  Cargo.toml  Justfile  README.md  codecov.yml  deny.toml  dprint.json  flake.nix  release-plz.toml
.config/: nextest.toml
cargo-sync-readme2/: Cargo.toml  README.md
cargo-sync-readme2/src/: config.rs  main.rs  render.rs
cargo-sync-readme2/src/content/: badge.rs  mod.rs  title.rs
cargo-sync-readme2/src/content/rustdoc/: code_block.rs  heading.rs  intra_link.rs  mod.rs
embed-changelog/: CHANGELOG.md  Cargo.toml  README.md
embed-changelog/src/: lib.rs  macro_impl.rs
openapiv3_1/: CHANGELOG.md  Cargo.toml  README.md
openapiv3_1/src/: content.rs  encoding.rs  example.rs  extensions.rs  external_docs.rs  header.rs  info.rs  lib.rs  link.rs  path.rs  request_body.rs  response.rs  schema.rs  security.rs  server.rs  tag.rs  xml.rs
openapiv3_1/src/snapshots/: openapiv3_1__request_body__tests__request_body_builder.snap  openapiv3_1__response__tests__response_builder.snap  openapiv3_1__tests__merge_2_openapi_documents.snap  openapiv3_1__tests__merge_same_path_diff_methods.snap  openapiv3_1__tests__nest_open_apis.snap  openapiv3_1__tests__openapi_custom_extension.snap  openapiv3_1__tests__serialize_openapi_json_minimal_success.snap  openapiv3_1__tests__serialize_openapi_json_with_paths_success.snap
postcompile/: CHANGELOG.md  Cargo.toml  README.md  build.rs
postcompile/src/: lib.rs  some_file.rs
postcompile/src/snapshots/: postcompile__tests__compile_failure.snap  postcompile__tests__compile_success.snap  postcompile__tests__compile_tests.snap
tinc/: CEL.md  CHANGELOG.md  Cargo.toml  README.md  annotations.proto
tinc-build/: Cargo.toml  README.md
tinc-build/src/: codegen.rs  error.rs  extern_paths.rs  lib.rs  path_set.rs  prost_explore.rs  proto_source_location.rs  types.rs
tinc-build/src/codegen/: cel.rs  config.rs  prost_sanatize.rs  serde.rs  service.rs  utils.rs
tinc-build/src/codegen/cel/: compiler.rs  functions.rs  types.rs
tinc-build/src/codegen/cel/compiler/: helpers.rs  resolve.rs
tinc-build/src/codegen/cel/functions/: all.rs  bool.rs  bytes.rs  contains.rs  double.rs  dyn_.rs  ends_with.rs  enum_.rs  exists.rs  exists_one.rs  filter.rs  has.rs  int.rs  is_email.rs  is_hostname.rs  is_inf.rs  is_ipv4.rs  is_ipv6.rs  is_nan.rs  is_ulid.rs  is_uri.rs  is_uuid.rs  map.rs  matches.rs  size.rs  starts_with.rs  string.rs  uint.rs
tinc-build/src/codegen/cel/functions/snapshots/: tinc_build__codegen__cel__functions__all__tests__all_cel_value.snap  tinc_build__codegen__cel__functions__all__tests__all_const_needs_runtime.snap  tinc_build__codegen__cel__functions__all__tests__all_proto_map.snap  tinc_build__codegen__cel__functions__all__tests__all_proto_repeated.snap  tinc_build__codegen__cel__functions__all__tests__all_runtime.snap  tinc_build__codegen__cel__functions__bytes__tests__bytes_runtime.snap  tinc_build__codegen__cel__functions__contains__tests__contains_runtime_map.snap  tinc_build__codegen__cel__functions__contains__tests__contains_runtime_repeated.snap  tinc_build__codegen__cel__functions__contains__tests__contains_runtime_string.snap  tinc_build__codegen__cel__functions__double__tests__double_runtime.snap  tinc_build__codegen__cel__functions__ends_with__tests__ends_with_runtime.snap  tinc_build__codegen__cel__functions__enum___tests__enum_runtime.snap  tinc_build__codegen__cel__functions__exists__tests__exists_const_requires_runtime.snap  tinc_build__codegen__cel__functions__exists__tests__exists_runtime_cel_value.snap  tinc_build__codegen__cel__functions__exists__tests__exists_runtime_map.snap  tinc_build__codegen__cel__functions__exists__tests__exists_runtime_repeated.snap  tinc_build__codegen__cel__functions__exists_one__tests__exists_one_const_requires_runtime.snap  tinc_build__codegen__cel__functions__exists_one__tests__exists_one_runtime_cel_value.snap  tinc_build__codegen__cel__functions__exists_one__tests__exists_one_runtime_map.snap  tinc_build__codegen__cel__functions__exists_one__tests__exists_one_runtime_repeated.snap  tinc_build__codegen__cel__functions__filter__tests__filter_const_requires_runtime.snap  tinc_build__codegen__cel__functions__filter__tests__filter_runtime_cel_value.snap  tinc_build__codegen__cel__functions__filter__tests__filter_runtime_map.snap  tinc_build__codegen__cel__functions__filter__tests__filter_runtime_repeated.snap  tinc_build__codegen__cel__functions__int__tests__int_runtime.snap  tinc_build__codegen__cel__functions__is_email__tests__is_email_runtime.snap  (+19 more)
tinc-build/src/codegen/service/: openapi.rs
tinc-build/src/error/: build.rs  cel.rs  codegen.rs  openapi.rs  prost_explore.rs  serde.rs  service.rs
tinc-cel/: Cargo.toml  README.md
tinc-cel/src/: lib.rs
tinc-integration-tests/: Cargo.toml  README.md  build.rs
tinc-integration-tests/pb/: bytes_service.proto  expressions.proto  flattened.proto  floats.proto  nested.proto  oneof.proto  recursive.proto  renamed.proto  simple.proto  simple_enum.proto  simple_service.proto  visibility.proto  well_known.proto
tinc-integration-tests/src/: bytes_service.rs  expressions.rs  flattened.rs  floats.rs  lib.rs  nested.rs  oneof.rs  recursive.rs  renamed.rs  simple.rs  simple_enum.rs  simple_service.rs  visibility.rs  well_known.rs
tinc-integration-tests/src/snapshots/: tinc_integration_tests__bytes_service__bytes_service_rest_schema.snap  tinc_integration_tests__floats__float_service_rest_schema.snap  tinc_integration_tests__simple_service__simple_service_rest_schema.snap
tinc-pb-prost/: Cargo.toml  README.md  annotations.proto  build.rs
tinc-pb-prost/src/: lib.rs
tinc-proc-macro/: Cargo.toml  README.md
tinc-proc-macro/src/: lib.rs  message_tracker.rs
tinc/src/: lib.rs  well_known.rs
tinc/src/private/: bytes.rs  const_macros.rs  deserializer.rs  enum_.rs  error.rs  expected.rs  float_with_non_finite.rs  fmt.rs  http.rs  identifier.rs  map.rs  mod.rs  oneof.rs  optional.rs  primitive.rs  repeated.rs  struct_.rs  tracker.rs  validation.rs  well_known.rs  wrapper.rs
tinc/src/private/http/: body.rs  path.rs  query.rs
(+11 files in other folders)
