[package]
name = "cargo-sync-readme2"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
description = "A cargo subcommand to sync README with crate documentation"

[lints]
workspace = true

[dependencies]
anyhow = "1"
camino = "1"
cargo_metadata = "0.23.1"
cargo_toml = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
console = "0.16"
pulldown-cmark = "0.13"
pulldown-cmark-to-cmark = "22.0.0"
regex = "1"
rustdoc-types = { version = "0.56", features = ["rustc-hash"] }
serde = "1"
serde_derive = "1"
serde_json = "1"
similar = { version = "2.7", features = ["inline"] }
toml = "0.9"
workspace-hack = { version = "0.1", path = "../workspace-hack" }
