[package]
name = "embed-changelog"
version = "0.1.2"
authors.workspace = true
documentation = "https://docs.rs/embed-changelog"
edition.workspace = true
keywords = ["documentation", "changelog", "embed"]
license.workspace = true
readme = "README.md"
repository.workspace = true
description = "A helper macro to embed changelogs in crate docs."

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
convert_case = "0.8"
fmtools = "0.1"
proc-macro2 = "1"
quote = "1"
regex = "1"
semver = "1"
# unfortunately we need syn full for `ItemMod`w
syn = { features = ["full"], version = "2" }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[package.metadata.sync-readme.rustdoc-mappings]
changelog = "./CHANGELOG.md"

[package.metadata.sync-readme.badges]
docs-rs = true
crates-io = true
license = true
codecov.component = "embed-changelog"
