[package]
name = "tinc-build"
version = "0.2.3"
authors.workspace = true
documentation = "https://docs.rs/tinc-build"
edition.workspace = true
keywords = ["grpc", "protobuf", "tonic", "codegen"]
license.workspace = true
readme = "README.md"
repository.workspace = true
description = "A build script that generates code for tinc protobuf annotations"

[lints]
workspace = true

[features]
default = ["prost"]
## Enables prost codegen
prost = ["dep:prost", "dep:prost-reflect", "dep:prost-build", "dep:prost-types"]
## Enables documentation of feature flags
docs = ["dep:document-features"]

[dependencies]
anyhow = "1"
base64 = "0.22"
bytes = "1"
cel-parser = { version = "0.8" }
convert_case = "0.8"
document-features = { optional = true, version = "0.2" }
fmtools = "0.1"
heck = "0.5"
indexmap = "2"
num-traits = "0.2"
openapiv3_1 = { path = "../openapiv3_1", features = ["debug"], version = "0.1" }
prettyplease = "0.2"
proc-macro2 = "1"
prost = { optional = true, version = "0.14" }
prost-build = { optional = true, version = "0.14" }
prost-reflect = { optional = true, version = "0.16" }
prost-types = { optional = true, version = "0.14" }
quote = "1"
regex = "1"
runtime-format = "0.1"
serde = "1"
serde_derive = "1"
serde_json = "1"
syn = "2"
thiserror = "2"
tinc-cel = { path = "../tinc-cel", version = "0.2" }
tinc-pb-prost = { path = "../tinc-pb-prost", version = "0.2" }
tonic-build = { default-features = false, version = "0.14" }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
insta = "1"
postcompile = { path = "../postcompile" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "--cfg",
    "docsrs",
    "--sort-modules-by-appearance",
    "--generate-link-to-definition",
]

[package.metadata.sync-readme]
features = ["docs"]

[package.metadata.sync-readme.rustdoc-mappings]
changelog = "./CHANGELOG.md"
Annotations = "./annotations.proto"

[package.metadata.sync-readme.badges]
docs-rs = true
crates-io = true
license = true
codecov.component = "tinc"
