[package]
name = "tinc-cel"
version = "0.2.3"
authors.workspace = true
documentation = "https://docs.rs/tinc-cel"
edition.workspace = true
keywords = ["grpc", "protobuf", "tonic", "codegen"]
license.workspace = true
readme = "README.md"
repository.workspace = true
description = "A CEL Type used by tinc-build and tinc for validating protobuf messages"

[lints]
workspace = true

[features]
## Enables runtime enum type indexing
runtime = []
## Enables documentation of feature flags
docs = ["dep:document-features"]

[dependencies]
bytes = "1"
chrono = "0.4"
document-features = { optional = true, version = "0.2" }
email_address = "0.2"
float-cmp = "0.10"
fmtools = "0.1"
linkme = "0.3"
num-traits = "0.2"
regex = "1"
thiserror = "2"
ulid = "1"
url = "2"
uuid = "1"
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
insta = "1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "--cfg",
    "docsrs",
    "--sort-modules-by-appearance",
    "--generate-link-to-definition",
]

[package.metadata.sync-readme]
features = ["docs"]

[package.metadata.sync-readme.rustdoc-mappings]
changelog = "./CHANGELOG.md"
Annotations = "./annotations.proto"

[package.metadata.sync-readme.badges]
docs-rs = true
crates-io = true
license = true
codecov.component = "tinc"
