[package]
name = "tinc-proc-macro"
version = "0.2.0"
authors.workspace = true
documentation = "https://docs.rs/tinc-proc-macro"
edition.workspace = true
keywords = ["grpc", "protobuf", "tonic", "codegen"]
license.workspace = true
readme = "README.md"
repository.workspace = true
description = "A proc macro that generates code for tinc protobuf annotations"

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1" }
quote = { version = "1" }
syn = { version = "2" }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "--cfg",
    "docsrs",
    "--sort-modules-by-appearance",
    "--generate-link-to-definition",
]

[package.metadata.sync-readme.rustdoc-mappings]
changelog = "./CHANGELOG.md"
Annotations = "./annotations.proto"

[package.metadata.sync-readme.badges]
docs-rs = true
crates-io = true
license = true
codecov.component = "tinc"
