[package]
name = "tinc"
version = "0.2.0"
authors.workspace = true
documentation = "https://docs.rs/tinc"
edition.workspace = true
keywords = ["grpc", "protobuf", "tonic", "rest"]
license.workspace = true
readme = "README.md"
repository.workspace = true
description = "GRPc to REST transcoding library"

[lints]
workspace = true

[features]
default = ["prost", "tonic"]
## Enables prost support
prost = ["dep:prost", "dep:prost-types", "dep:tonic-prost"]
## Enables tonic support
tonic = ["dep:tonic", "dep:tonic-types"]
## Enables changelog and documentation of feature flags
docs = ["dep:embed-changelog", "dep:document-features"]

[dependencies]
axum = "0.8"
base64 = "0.22"
bytes = "1.6.0"
http = "1"
http-body = "1"
http-body-util = "0.1.0"

prost = { optional = true, version = "0.14" }
prost-types = { optional = true, version = "0.14" }
tonic = { optional = true, version = "0.14" }
tonic-prost = { optional = true, version = "0.14" }
tonic-types = { optional = true, version = "0.14" }

serde = "1"
serde_derive = "1"
serde_json = "1"
serde_repr = "0.1"

chrono = { features = ["serde"], version = "0.4.36" }
linear-map = "1.2.0"
linkme = "0.3"
mediatype = "0.20"
num-traits = "0.2.19"
regex = "1"
serde_qs = "0.15.0"
thiserror = "2"

document-features = { optional = true, version = "0.2" }
embed-changelog = { optional = true, path = "../embed-changelog", version = "0.1" }
openapiv3_1 = { path = "../openapiv3_1", version = "0.1" }
tinc-cel = { path = "../tinc-cel", features = ["runtime"], version = "0.2" }
tinc-proc-macro = { path = "../tinc-proc-macro", version = "0.2" }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "--cfg",
    "docsrs",
    "--sort-modules-by-appearance",
    "--generate-link-to-definition",
]

[package.metadata.sync-readme]
features = ["docs"]

[package.metadata.sync-readme.rustdoc-mappings]
changelog = "./CHANGELOG.md"
Annotations = "./annotations.proto"
CEL = "./CEL.md"

[package.metadata.sync-readme.badges]
docs-rs = true
crates-io = true
license = true
codecov.component = "tinc"
